--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
   <hr class="featurette-divider">
       <div class="featurette">
           <h2 class="featurette-heading">Looking for a place to jump in? <span class="muted">These might be a good place to start.</span></h2>
-          <iframe src="http://codeforamerica.org/geeks/civicissues/widget?labels=help wanted&number=6" width="100%" height="600" frameBorder="0"></iframe>
+          <iframe src="https://www.codeforamerica.org/geeks/civicissues/widget?organization_name=Code-for-Dayton&labels=Help Wanted&number=6" width="100%" height="600" frameBorder="0"></iframe>
     </div>
 
   <hr class="featurette-divider">
