Creating projects pages for our projects, and updating the list a bit.

--- a/index.html
+++ b/index.html
@@ -58,22 +58,22 @@
                   <ul class="dropdown-menu">
                     <li>
                       <a href="http://www.meetup.com/Code-for-Dayton/">
-                        <i class=icon-user icon-white></i>
+                        <i class="icon-user"></i>
                         Our Gatherings on Meetup</a>
                     </li>
                     <li>
                       <a href="https://github.com/codefordayton">
-                        <i class=icon-wrench icon-white></i>
+                        <i class="icon-wrench"></i>
                         Our Code on GitHub</a>
                     </li>
                     <li>
                       <a href="http://codefordayton.uservoice.com/">
-                      <i class=icon-thumbs-up icon-white></i>
+                      <i class="icon-thumbs-up"></i>
                       Idea List for Civic Apps and Open Data</a>
                     </li>
                     <li>
                       <a href="https://github.com/codefordayton/codeofconduct">
-                      <i class=icon-cog icon-white></i>
+                      <i class="icon-cog"></i>
                       Code of Conduct</a>
                     </li>
 
@@ -81,15 +81,9 @@
 
                     <li>
                       <a href="https://twitter.com/search?q=%23cfabrigade">
-                        <i class=icon-retweet icon-white></i>
+                        <i class="icon-retweet"></i>
                         #cfabrigade - National Tweets</a>
                       </li>
-                    <li>
-                      <a href="http://codeforamerica.tumblr.com/">
-                        <i class=icon-bullhorn icon-white></i>
-                        Brigade's Tumblr</a>
-                      </li>
-                      
                   </ul>
                 </li>
                 <li>            <a href="https://secure.codeforamerica.org/page/contribute/default?custom1=Please%20send%20to%20Code%20for%20Dayton"><button type="button" class="btn btn-default btn-sm" style="margin: 0px;"><i class=icon-heart></i> Donate</button></a></li>
@@ -167,44 +161,34 @@
  <hr class="featurette-divider">
 
       <div id="projects" class="featurette">
-        <h2 class="featurette-heading" style="text-align: center; margin-bottom: 20px;">Works In Progress</h2>
+        <h2 class="featurette-heading" style="text-align: center; margin-bottom: 20px;">Projects</h2>
 
       <div class="row">
 
                         <div class="span4">
-                    <a href="esl">
+                    <a href="projects/esl.html">
           <img name="collide" id="collide" style="display: block; margin-left: auto; margin-right: auto"src="assets/images/noun_project_icon_11002_easel.png" alt="EASL" />
         </a>
                   <h2 style="text-align: center;">English As A Second Language (ESL)</h2>
         </div><!-- /.span4-->
 
                 <div class="span4">
-                    <a href="/grocer">
+                    <a href="projects/grocer.html">
           <img name="grocer" style="display: block; margin-left: auto; margin-right: auto"src="assets/images/noun_project_icon_5260_map.png" alt="Collider Project" />
         </a>
                   <h2 style="text-align: center;">Grocer</h2>
         </div><!-- /.span4-->
         <div class="span4">
-                   <a href="https://communities.socrata.com/catalog/code-for-dayton/"><img name="portal" style="display: block; margin-left: auto; margin-right: auto"src="assets/images/noun_project_icon_14774_portal.png" alt="Open Data Portal" /></a>
+                   <a href="projects/portal.html"><img name="portal" style="display: block; margin-left: auto; margin-right: auto"src="assets/images/noun_project_icon_14774_portal.png" alt="Open Data Portal" /></a>
 
                   <h2 style="text-align: center;">Open Data Portal</h2>
         </div><!-- /.span4 -->
       </div><!-- /.row -->
       <div class="row">
         <div class="span4">
-                   <a href="http://localwiki.net/dayton"><img name="book" style="display: block; margin-left: auto; margin-right: auto"src="assets/images/noun_project_icon_17900_book.png" alt="Dayton Local Wiki" /></a>
-
-                  <h2 style="text-align: center;">Dayton Local Wiki</h2>
-        </div><!-- /.span4 -->
-        <div class="span4">
-                   <a href="http://github.com/codefordayton/daytonreap"><img name="foreclosure" style="display: block; margin-left: auto; margin-right: auto"src="assets/images/noun_project_icon_50539_foreclosure.png" alt="Dayton REAP" /></a>
-                  <h2 style="text-align: center;">Dayton REAP</h2>
+                   <a href="projects/lotlinker.html"><img name="foreclosure" style="display: block; margin-left: auto; margin-right: auto"src="assets/images/noun_project_icon_50539_foreclosure.png" alt="LotLinker" /></a>
+                  <h2 style="text-align: center;">LotLinker</h2>
 	</div>
-        <div class="span4">
-                   <a href="http://github.com/codefordayton/game"><img name="game" style="display: block; margin-left: auto; margin-right: auto"src="assets/images/noun_project_icon_8609_game.png" alt="Lot Linker" /></a>
-
-                  <h2 style="text-align: center;">The Game</h2>
-        </div><!-- /.span4 -->
       </div><!-- /.row -->
     </div><!-- /.featurette -->
 
@@ -275,7 +259,7 @@
       <div class="featurette">
         <img name="contact" id="contact" class="featurette-image pull-right" src="">
         <h2 class="featurette-heading">Want Even More Info? <span class="muted">Contact Us.</span></h2>
-        <p class="lead">Our organizers are Dave Caraway (<a href="mailto:dave@fogmine.com">dave@fogmine.com</a> or <a href="https://twitter.com/davecaraway">@DaveCaraway</a>) and Dave Best (<a href="mailto:dave.e.best@gmail.com">dave.e.best@gmail.com</a> or <a href="https://twitter.com/davidebest">@DavidEBest</a>). We want to hear from you!</p>
+        <p class="lead">Our organizers are Dave Best (<a href="mailto:dave@codefordayton.org">dave@codefordayton.org</a> or <a href="https://twitter.com/davidebest">@DavidEBest</a>) and Janet Michaelis (<a href="mailto:janet@codefordayton.org">janet@codefordayton.org</a>). We want to hear from you!</p>
         <a href="https://plus.google.com/101164371594260325014" rel="publisher">Find us on Google+</a>
       </div>
 
