--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
       <div class="featurette">
         <img name="contact" id="contact" class="featurette-image pull-right" src="">
         <h2 class="featurette-heading">Want Even More Info? <span class="muted">Contact Us.</span></h2>
-        <p class="lead">Our organizers are Dave Caraway (<a href="mailto:dave@fogmine.com">dave@fogmine.com</a> or <a href="https://twitter.com/davecaraway">@DaveCaraway</a>) and Dave Best (<a href="mailto:dave.e.best@gmail.com">dave.e.best@gmail.com</a> or <a href="https://twitter.com/davidebest">@DavidEBest</a>). We want to hear from you!</p>
+        <p class="lead">Our organizers are Dave Best(<a href="mailto:dave.e.best@gmail.com">dave.e.best@gmail.com</a> or <a href="https://twitter.com/davidebest">@DavidEBest</a>) and Janet Michaelis (<a href="mailto:janet@codefordayton.org">janet@codefordayton.org</a>). We want to hear from you!</p>
         <a href="https://plus.google.com/101164371594260325014" rel="publisher">Find us on Google+</a>
       </div>
 
